# Nerif

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  README_IMAGE_COMPRESSION.md  pyproject.toml
.github/workflow/: black.yml
.github/workflows/: lint.yml  release.yml
docs/: docusaurus.config.ts  intro.md  package-lock.json  package.json  setup_guide.md  tsconfig.json
docs/blog/: 2024-10-31-first-blog-post.md  authors.yml
docs/components/model/: nerif-token-counter.md  vision-model.md
docs/docs/: intro.md  nerif-environment.md
docs/docs/components/: _category_.json  nerif-architecture.md
docs/docs/components/core/: _category_.json  nerif-core.md  nerif-exceptions.md  nerif-formatter.md  nerif-log.md  nerif-memory.md  nerif-rag.md
docs/docs/components/flow/: _category_.json
docs/docs/components/model/: _category_.json  audio-model.md  batch-api.md  image-compression.md  nerif-agent-framework.md  nerif-agent.md  nerif-model.md  nerif-token-counter.md
docs/docs/examples/: _category_.json  example-1.md  example-10.md  example-11.md  example-12.md  example-13.md  example-3.md  example-4.md  example-5.md  example-6.md  example-7.md  example-8.md  example-9.md
docs/examples/: example-2.md
docs/i18n/zh-Hans/docusaurus-plugin-content-docs/current/: intro.md  nerif-environment.md
docs/i18n/zh-Hans/docusaurus-plugin-content-docs/current/components/: nerif-architecture.md
docs/i18n/zh-Hans/docusaurus-plugin-content-docs/current/components/core/: nerif-core.md  nerif-exceptions.md  nerif-formatter.md  nerif-log.md  nerif-memory.md  nerif-rag.md
docs/i18n/zh-Hans/docusaurus-plugin-content-docs/current/components/model/: audio-model.md  batch-api.md  image-compression.md  nerif-agent-framework.md  nerif-model.md  nerif-token-counter.md  vision-model.md
docs/i18n/zh-Hans/docusaurus-plugin-content-docs/current/examples/: example-1.md  example-10.md  example-11.md  example-12.md  example-13.md  example-2.md  example-3.md  example-4.md  example-5.md  example-6.md  example-7.md  example-8.md  example-9.md
docs/i18n/zh-Hans/docusaurus-theme-classic/: navbar.json
docs/src/components/HomepageFeatures/: index.tsx
docs/superpowers/plans/: 2026-03-15-nerif-v1.3.0.md
docs/superpowers/specs/: 2026-03-15-nerif-v1.3.0-design.md
examples/: 01_agent_simple.py  02_nerif_if.py  03_nerif_match.py  04_nerif_format.py  05_token_counter.py  06_log_to_file.py  07_vision_model.py  08_max_token.py  09_nerification.py  10_batch_api.py  10_ollama_embeddings.py  11_image_compression.py  11_tool_calling.py  12_structured_output.py  12_vlm_auto_compression.py  13_multimodal.py  14_agent.py  15_anthropic_model.py  15_tool_decorator.py  16_gemini_model.py  17_multi_provider.py  18_retry_config.py  19_streaming.py  20_async.py  21_pydantic_output.py  22_optional_embedding.py  23_conversation_memory.py  24_observability.py  25_speech_to_text.py  26_text_to_speech.py  27_image_generation.py  28_rag_basics.py  29_combined_features.py  agent_simple.py
nerif/: __init__.py  nerif.py  nerif_agent.py
nerif/agent/: __init__.py  agent.py  nerif_api_store.py  nerif_token_counter.py  token_counter.py  utils.py
nerif/batch/: __init__.py  batch.py  file.py
nerif/cli/: __init__.py  compress_image.py
nerif/core/: __init__.py  core.py  format.py  utils.py
nerif/model/: __init__.py  audio_model.py  model.py  vision_model_enhanced.py
nerif/nerif_agent/: __init__.py  nerif_agent.py  nerif_api_store.py  nerif_custom_model.py  nerif_token_counter.py  utils.py
nerif/nerif_core/: __init__.py  log.py  nerif.py  nerif_format.py
nerif/utils/: __init__.py  format.py  image_compress.py  log.py  token_counter.py  utils.py
scripts/: format.sh
src/nerif/: __init__.py  exceptions.py  nerif.py
src/nerif/agent/: __init__.py  agent.py  collaboration.py  orchestration.py  state.py  tool.py
src/nerif/asr/: __init__.py  transcriber.py
src/nerif/batch/: __init__.py  batch.py  file.py
src/nerif/cli/: __init__.py  check.py  main.py  test_model.py
src/nerif/core/: __init__.py  core.py
src/nerif/img_gen/: __init__.py
src/nerif/memory/: __init__.py  conversation.py
src/nerif/model/: __init__.py  audio_inference.py  audio_model.py  image_generation.py  model.py  vision_model_enhanced.py
src/nerif/observability/: __init__.py  budget.py  dashboard.py  otel.py  recorder.py  report.py  store.py  tracing.py
src/nerif/observability/templates/: trace_report.html.j2
src/nerif/rag/: __init__.py  base.py  numpy_store.py
src/nerif/tts/: __init__.py  synthesizer.py
src/nerif/utils/: __init__.py  callbacks.py  constants.py  fallback.py  format.py  image_compress.py  log.py  prompt.py  rate_limit.py  retry.py  token_counter.py  utils.py
src/nerif_native/: Cargo.toml  pyproject.toml
src/nerif_native/src/: base64_ops.rs  image_compress.rs  lib.rs  media_utils.rs
src/pages/: index.tsx
test/: nerif_agent_test.py  nerif_format_test.py  nerif_logits.py  nerif_model_test.py  nerif_model_test_ollama.py  nerif_ollama_embedding_test.py  nerif_test.py  nerif_token_counter_test.py  nerif_tool_calling_test.py  test.py  test_agent_as_tool.py  test_anthropic_provider.py  test_asr.py  test_async.py  test_async_agent.py  test_audio_inference.py  test_audio_model.py  test_batch_api.py  test_budget.py  test_callbacks.py  test_cli_commands.py  test_collaboration.py  test_conversation_memory.py  test_dashboard.py  test_exceptions.py  test_fallback.py  test_feature_packages.py  test_format_string_list.py  test_gemini_provider.py  test_image_compress.py  test_image_generation.py  test_integration.py  test_match.py  test_observability_e2e.py  test_observability_integration.py  test_optional_embedding.py  test_orchestration.py  test_otel_adapter.py  test_phase0_agent_state.py  test_prompt_template.py  (+19 more)
