[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nerif"
version = "0.5.0"
description = "LLM powered Python"
readme = "README.md"
authors = [{ name = "Chivier Humber"}]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["feed", "reader", "tutorial"]
dependencies = [
    "requests",
    "numpy",
    "httpx",
    "openai",
    "python-dotenv",
    "litellm"
]
requires-python = ">=3.8"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest", "ipython"]

[project.urls]
Homepage = "https://github.com/Chivier/nerif"

[tool.bumpver]
current_version = "0.5.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "Bump version {old_version} -> {new_version}"
commit          = true
tag             = true
push            = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']

[tool.black]
line-length = 120
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
